<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.androidlabs.StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_message"
        android:id="@+id/textView" />

    <Button
        android:text="@string/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <Button
        android:text="@string/chatbtntxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chatbtn"
        android:layout_alignBaseline="@+id/button"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/button"
        android:layout_marginStart="46dp" />

    <Button
        android:text="@string/weatherbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/weatherBtn"
        android:layout_below="@+id/button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:layout_toStartOf="@+id/chatbtn" />

    <Button
        android:id="@+id/toolbarBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/chatbtn"
        android:layout_alignStart="@+id/chatbtn"
        android:layout_alignTop="@+id/weatherBtn"
        android:text="@string/toolbarBtnName" />

</RelativeLayout>
